Fix an assert when trying to export a palette

(it also fixes the code doing nothing for the bug reporter)

BUG:454949